# dbfast

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_CD_SETUP_SUMMARY.md  CI_OPTIMIZATION_PATCH.md  CI_PERFORMANCE_OPTIMIZATION.md  CI_WORKFLOW_SIMPLIFICATION.md  Cargo.toml  ENTERPRISE_REPORT.md  LICENSE  Makefile  PHASING.md  PUBLICATION_SUMMARY.md  README.md  ci-optimization.patch  ci-simplification.patch  dbfast.toml.example  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: CODEOWNERS  README.md  auto-assign.yml  branch-protection.md  dependabot.yml  labeler.yml
PHASING/: ORCHESTRATOR.md  PHASE_1.md  PHASE_2.md  PHASE_2A.md  PHASE_2B.md  PHASE_2C.md  PHASE_2D.md  PHASE_3.md  PHASE_3A.md  PHASE_3B.md  PHASE_4.md  PHASE_4A.md  PHASE_4B.md  PHASE_5.md  PHASE_6.md  README.md
benches/: benchmarks.rs  enterprise_benchmarks.rs  enterprise_benchmarks.rs.disabled
docs/: README.md  github-setup.md
scripts/: complete-phase.sh  phase-status.sh  run-phase.sh  setup-dev.sh
src/: backup.rs  change_detector.rs  cli.rs  clone.rs  config.rs  connection.rs  database.rs  environment.rs  error.rs  errors.rs  health.rs  lib.rs  main.rs  metrics.rs  observability.rs  query.rs  remote.rs  retry.rs  scanner.rs  security.rs  sql_executor.rs  sql_repository.rs  template.rs  validators.rs
test_fixtures/: schema.sql  seed.sql
tests/: backup_tests.rs  change_detection_tests.rs  cli_tests.rs  clone_atomic_tests.rs  clone_connection_tests.rs  clone_security_tests.rs  clone_tests.rs  clone_verification_tests.rs  config_flag_tests.rs  config_tests.rs  database_tests.rs  enterprise_integration_tests.rs  enterprise_integration_tests.rs.disabled  environment_commands_tests.rs  environment_tests.rs  errors_tests.rs  (+20 more)
(+30 files in other folders)
