[package]
name = "dbfast"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["evoludigit"]
description = "A fast database library"
license = "MIT"
repository = "https://github.com/evoludigit/dbfast"
keywords = ["database", "performance"]
categories = ["database"]

[[bin]]
name = "dbfast"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tokio-postgres = "0.7"
bb8 = "0.9"
bb8-postgres = "0.9"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.4"
globset = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
testcontainers = "0.15"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true